<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jullietnyaware.myapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        android:id="@+id/Title"
        android:text="@string/Title"
        android:textStyle="italic"
        android:textAllCaps="true"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:layout_below="@+id/Title"
        android:layout_marginBottom="10dp"
        android:id="@+id/Salad"
        android:background="@drawable/foodies"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/method"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/Salad"
        android:id="@+id/method"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/Salad">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ingredients"
            android:layout_marginTop="25dp"
            android:id="@+id/buttonContext"
            android:textStyle="italic"
            android:layout_alignParentTop="true"
            android:onClick="onCreateContextMenu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:text="@string/HowToMakeIt"
            android:layout_below="@+id/buttonContext"
            android:id="@+id/HowToMakeIt"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_below="@+id/HowToMakeIt"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:id="@+id/buttonLogin"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"
            android:onClick="ShowPopUp"/>
    </RelativeLayout>



</RelativeLayout>
